@@ -7,3 +7,11 @@
 - State Pattern
 - Memento to undo plays
 - MVC
+
+### Required
+- Java 15
+- JavaFX
+- Add path to JavaFX on compile
+```
+--module-path /path/to/javafx/sdk --add-modules javafx.controls,javafx.fxml
+```
